# CarAware

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.jetson.yml  docker-compose.test.yml  docker-compose.train.yml  docker-compose.viz.yml  docker-compose.yml  entrypoint_ros_carla.sh  entrypoint_tf.sh  localization.rviz  main.py  play.py  requirements.txt  run_eval.py  simulation.py  top_view.py  train.py  wait_for_carla.py
CarlaEnv/: carla_env.py
config/: sensors.yaml  simulation.yaml  training.yaml
docker/ros/: Dockerfile  requirements.txt
docker/tf/: Dockerfile  Dockerfile.jetson  requirements.jetson.txt  requirements.txt
notebooks/: training.ipynb  trajectories.ipynb
rl/: play.py  ppo.py  run_eval.py  serve_model.py  train.py  utils.py
rl/CarlaEnv/: carla_env.py  reward_functions.py
ros/: model_node.py  package.xml  serve_model.py  setup.cfg  setup.py
ros/caraware_ros/: ackermann_to_vesc.py  carla_republisher.py  controller.py  ekf_to_zmq.py  goal_controller.py  model_bridge.py  model_node.py  orientation_viz.py  plotter.py  serve_model.py  square_planner.py  stanley_controller.py  test_kalman_socket.py  vesc_republisher.py  vesc_to_ackermann.py
ros/config/: ekf.yaml  jetson.rviz  localization.rviz  vesc_config.yml
ros/launch/: bringup_carla.launch.py  bringup_jetson.launch.py  carla_bridge_model.launch.py  ds4_control.launch.py  goal_control.launch.py  localization_stack.launch.py  replay_bag.launch.py  square_control.launch.py
ros/scripts/: model_node.py  serve_model.py
simulation/: simulation.py  top_view.py
(+5 files in other folders)
